tdf#130969 Chart view: fix incorrect precision of axis labels

Use UNLIMITED_PRECISION in case of GENERAL number format of labels
in embedded charts, just like we do in Calc.

Regression from commit: 7f373a4c88961348f35e4f990182628488878efe
(tdf#48041 Chart: do not duplicate major value)

Change-Id: I298353d748f34e23bc642b3b0c365df6e73c23aa